--- a/Demo/index.html
+++ b/Demo/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Marlon</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Nelli Mahesh</span><br> Web Designer</h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
@@ -73,8 +73,8 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Marlon</h2>
-                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                        <h2 class="about__subtitle">I'am Nelli Mahesh</h2>
+                        <p class="about__text">Aspiring a suitable response entry level position in an organization that provides me an opportunity to prove myself and polish my skills through challenging tasks to improve myself as well as for the organization.</p>           
                     </div>                                   
                 </div>
             </section>
