--- a/Demo/index.html
+++ b/Demo/index.html
@@ -96,7 +96,7 @@
 
                             </div>
                             <div>
-                                <span class="skills__percentage">80%</span>
+                                <span class="skills__percentage">90%</span>
                             </div>
                         </div>
                         <div class="skills__data">
@@ -108,7 +108,7 @@
                                 
                             </div>
                             <div>
-                                <span class="skills__percentage">70%</span>
+                                <span class="skills__percentage">80%</span>
                             </div>
                         </div>
                         <div class="skills__data">
@@ -178,7 +178,7 @@
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Enviar" class="contact__button button">
+                        <input type="button" value="Send" class="contact__button button">
                     </form>
                 </div>
             </section>
